--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Oreilly\\ModernPHP\\": "src/"
+            "Tiago\\LivroModernPHP\\": "src/"
         }
     }
 }
