--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,10 @@
     },
     "require": {
         "php" : ">=5.6.0",
-        "guzzlehttp/guzzle": "^6.1"
+        "guzzlehttp/guzzle": ">=6.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.0"
+        "phpunit/phpunit": ">=5.0"
     },
     "suggest": {
         "league/csv": "^8.0"
